--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-syntax-highlighter": "^15.4.5",
     "react-time-picker": "^6.3.0",
     "react-typed": "^1.2.0",
+    "react-webcam": "^7.1.1",
     "styled-components": "^5.3.11",
     "swal": "^0.1.0",
     "sweetalert": "^2.1.2",
